# ibc-canvas-poc

./: .gitignore  Cargo.toml  README.md
contracts/pixel-receiver/: Cargo.toml
contracts/pixel-receiver/src/: error.rs  ibc.rs  lib.rs  msg.rs  state.rs
contracts/pixel-sender/: Cargo.toml
contracts/pixel-sender/src/: ibc.rs  lib.rs  state.rs
