[workspace]
members = ["contracts/*"]

[workspace.package]
version       = "0.1.1"
edition       = "2021"
license       = "Apache-2.0"
repository    = ""
homepage      = ""
documentation = ""
rust-version  = "1.65"

[workspace.dependencies]
cosmwasm-schema = "1.2.1"
cosmwasm-std = { version = "1.2.2", features = ["ibc3"] }
cw2             = "1.1.0"
cw20            = "1.1.0"
cw-multi-test   = "0.16.5"
cw-ownable      = "0.5.1"
cw-storage-plus = "1.1.0"
cw-utils        = "1.0.1"
schemars        = "0.8.11"
serde           = { version = "1.0.152", default-features = false, features = ["derive"] }
thiserror       = "1.0.38"
semver          = "1"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
